--- a/04-results.Rmd
+++ b/04-results.Rmd
@@ -27,14 +27,24 @@ knitr::include_graphics('files/sample_flowchart.png', dpi = 300)
 
 Les participant·e·s étaient âgé·e·s de `r min(obj_demog_data$age)` à `r max(obj_demog_data$age)` ans (âge médian : `r round(median(obj_demog_data$age))` ans) et se répartissaient en `r sum(obj_demog_data$genre == "F")` femmes transgenres, `r sum(obj_demog_data$genre == "M")` hommes transgenres, `r sum(obj_demog_data$genre == "NB" & obj_demog_data$sexe == 'F')` personnes non-binaires transmasculines, et `r sum(obj_demog_data$genre == "NB" & obj_demog_data$sexe == 'M')` personne non-binaire transféminine. `r scales::percent(sum(obj_demog_data$province == 'Liege')/nrow(obj_demog_data))` des participant·e·s vivaient dans la province de Liège. `r sum(obj_demog_data$mutuelle == 'BIM')` participant·e·s étaient BIM et `r sum(obj_demog_data$mutuelle == "Non-inscrit")` n'étaient pas en ordre de mutuelle. `r scales::percent((sum(obj_demog_data$adm_pren == '1')+sum(obj_demog_data$adm_pren == '2'))/nrow(obj_demog_data))` des participant·e·s avaient modifié leur prénom et `r scales::percent((sum(obj_demog_data$adm_cec == '1')+sum(obj_demog_data$adm_cec == '2'))/nrow(obj_demog_data))` avaient modifié leur marqueur de genre à l'état-civil . Toutes ces caractéristiques démographiques sont résumées dans le tableau \@ref(tab:DemogTab).
 
+<center>
+
+<caption>
+
+(#tab:DemogTab) Caractéristiques démographiques des participant·e·s
+
+</caption>
+
+</center>
+
 ```{r demog_table, include=FALSE}
 
 source('scripts/tables/demog_table.R', encoding = 'UTF-8')
 ```
 
-```{r demog_table_html, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "DemogTab", out.width = '100%', eval = knitr::is_html_output()}
+```{r DemogTab, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "DemogTab", out.width = '100%', eval = knitr::is_html_output()}
 
-.demog_ft
+.demog_tbl_HTML
 ```
 
 ```{r demog_table_word, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "DemogTab", eval = !knitr::is_html_output()}
@@ -60,7 +70,7 @@ source('scripts/plots/create_follow_up_plot.R', encoding = 'UTF-8')
 
 Les participants·e·s de l'étude ont été suivis entre `r min(.followup_time$followup)` et `r max(.followup_time$followup)` jours avec une durée médiane de `r round(median(.followup_time$followup))` jours. `r sum(.followup$N[.followup$time_classe == '3 mois'])` patient·e·s ont été suivi·e·s durant trois mois, `r sum(.followup$N[.followup$time_classe == '6 mois'])` patient·e·s, durant six mois `r sum(.followup$N[.followup$time_classe == '9 mois'])`, durant neuf mois, et `r sum(.followup$N[.followup$time_classe == '12 mois'])`, durant douze mois ou plus. Un·e seul·e patient·e a été perdu·e de vue, à la suite de sa décision d'interrompre le THAG. La figure \@ref(fig:FollowPlot) représente la durée du suivi, par genres. Dans le reste du texte, la première consultation sera abrégée T0 et chaque consultation suivante sera abrégée de T1 à T4 selon le trimestre en question.
 
-```{r FollowPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Durée du suivi, par genres", fig.dim=c(10,8), out.width = '100%', eval = knitr::is_html_output()}
+```{r FollowPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Durée du suivi, par genres", fig.dim=c(10,8), out.width = '100%', out.height='400px', eval = knitr::is_html_output()}
 
 .anim_followup_plot
 ```
@@ -83,7 +93,7 @@ Une des questions que je pose à l'anamnèse de la première consultation est de
 
 Parmi les patient·e·s ayant fait un coming out à leur famille, `r .p_reac_diff` ont vécu quelques difficultés dans les relations familiales par la suite dont `r .p_reac_neg` qui ont dû faire face à une réaction négative voire hostile.
 
-```{r FamPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Membres de la famille auxquel·le·s les participant·e·s ont annoncé leur transidentité, par genres", fig.dim=c(10,8), out.width = '100%', eval = knitr::is_html_output()}
+```{r FamPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Membres de la famille auxquel·le·s les participant·e·s ont annoncé leur transidentité, par genres", out.width = '100%', out.height='500px', eval = knitr::is_html_output()}
 
 .anim_fam_plot
 ```
@@ -95,7 +105,7 @@ knitr::include_graphics('output/plots/fam_plot.png')
 
 Sur le plan amical, la figure \@ref(fig:AmisPlot) montre un schéma similaire à ce qui a été décrit pour le *coming out* familial avec une moins grande tendance des personnes transféminines à révéler leur transidentité à leurs proches. Ces résultats doivent toutefois être interprétés prudemment dans la mesure où il manque des données pour 9 participant·e·s (5 personnes transféminines et 4 personnes transmasculines). Toutefois, puisque les valeurs manquantes ne touchaient pas disproportionnent un groupe et que les résultats étaient cohérents avec ceux de la figure \@ref(fig:FamPlot), j'ai choisi de présenter ce graphique. En ce qui concerne la réaction des ami·e·s, celle-ci a été positive pour la totalité de l'échantillon.
 
-```{r AmisPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Ami·e·s auxquel·le·s les participant·e·s ont annoncé leur transidentité, par genres", fig.dim=c(10,8), out.width = '100%', eval = knitr::is_html_output()}
+```{r AmisPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Ami·e·s auxquel·le·s les participant·e·s ont annoncé leur transidentité, par genres", out.width = '100%', out.height='500px', eval = knitr::is_html_output()}
 
 .anim_amis_plot
 ```
@@ -145,7 +155,7 @@ source('scripts/plots/create_sankey_plot.R', encoding = 'UTF-8')
 
 Comme développé dans l'introduction, l'usage et le choix d'un antiandrogène chez les personnes transféminines demeure controversé. De ce fait, il s'agissait d'une décision partagée prenant en compte l'importance que les patient·e·s accordaient à certains effets du traitement, le coût des molécules, le besoin psychologique d'avoir une T2~s~ dans les valeurs classiques des femmes cisgenres, ainsi que les appréhensions vis-à-vis de l'usage d'un antiandrogène. Le traitement été ensuite réévalué au fil des consultations, en prenant en compte les éléments sus-cités ainsi que les résultats de la prise de sang. Afin de visualiser la répartition des traitements ainsi que les changements successifs au fil des consultations, un diagramme de Sankey a été réalisé (figure \@ref(fig:SankeyPlot)). En début de traitement, `r .p_noaa_T0` des patient·e·s ont choisi d'opter pour une monothérapie œstrogénique et les `r .N_spiro_T0` patient·e·s restant·e·s ont choisi de commencer leur traitement avec de la Spironolactone comme antiandrogène. À T2, deux patient·e·s qui ne prenaient pas d'antiandrogène ont choisi d'en prendre un, en raison d'une T~s~ trop élevée, malgré une E2~s~ satisfaisante. Leur choix s'est alors porté sur de la Spironolactone ou du Depo-Eligard, selon les possibilités financières. De plus, un·e patient·e a préféré passer de la Spironolactone au Depo-Eligard pour des préférences personnelles. Enfin, à T3, un·e des patient·e·s a fait le même changement de molécule, en raison de troubles de la concentration sous Spironolactone. Au niveau de la posologie, la Spironolactone était administrée à raison de 100mg par jour en deux prises tandis que le Depo-Eligard était injecté trimestriellement. Au niveau de l'E2, le choix entre Dermestril et Oestrogel se basait sur des préférences sur le mode d'application ou des questions d'oubli d'application du gel. La posologie était ajustée dans l'objectif d'obtenir une E2~s~ entre 100 et 200ng/L. La posologie de l'Oestrogel se situait entre `r min(.poso_gel)`mg/J et `r max(.poso_gel)`mg/J avec une valeur médiane de `r median(.poso_gel)`mg/J, ce qui correspond respectivement à 2 et 4 pressions par jour. Pour le Dermestril, la posologie des patchs variait entre `r min(.poso_patch)`µg/24h et `r max(.poso_patch)`µg/24h (médiane : `r median(.poso_patch)`µg/24h). Enfin, une patiente a fait le choix du Zumenon, à la posologie de 4mg/J. Le coût annuel du traitement variait entre 42,1€, pour les monothérapies d'Oestrogel, et `r max(obj_ttmt_data$cout_an)`€ pour la combinaison Dermestril + Depo-Eligard (coût annuel médian : `r .med_cout_F`€).
 
-```{r SankeyPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution du choix d'antiandrogène au fil des consultations", fig.dim=c(10,8), out.width = '100%', eval = knitr::is_html_output()}
+```{r SankeyPlot, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution du choix d'antiandrogène au fil des consultations", out.width = '100%', out.height='450px', eval = knitr::is_html_output()}
 
 .anim_sankey_plot
 ```
@@ -161,12 +171,12 @@ Vu le point de controverse sur les antiandrogènes, j'ai souhaité comparer les 
 
 La figure \@ref(fig:OutcomePlotF) se divise en quatre panneaux représentant quatre angles différents de l'axe HHG, eux-mêmes divisés en trois graphiques, selon l'antiandrogène. Pour chaque panneau, on retrouve les valeurs individuelles de T~s~ sous formes de points, avec un code couleur selon qu'elles correspondent ou non aux valeurs-cibles. Travaillant majoritairement avec le laboratoire de la Citadelle, j'ai choisi leur cutoff de 2,29nmol/L pour la T~s~ maximale chez les femmes cisgenres. Les barres représentent la valeur médiane du paramètre considéré (T~s~, pour les panneaux A à C et LH pour le panneau D). Enfin, la droite de régression montre l'évolution générale des paramètres. Le panneau A montre l'évolution de la T~s~ au fil du temps. On peut constater, à la platitude des droites de régression ainsi qu'à la dispersion des valeurs individuelles que le temps ne semble pas influencer l'équilibre hormonal. Autrement dit, l'équilibre semble atteint rapidement, dès T1, et se maintenir. On notera une T~s~ médiane anormalement élevée à T2, pour le traitement par E2 seul, vraisemblablement liée aux données manquantes chez deux patient·e·s à ce moment. D'autres soucis de compliance thérapeutique ne sont pas à exclure, vu l'E2~s~ plus faible également (voir tableau \@ref(tab:OutcomeTableF)). De plus, si la Spironolactone ne semble pas contribuer à abaisser la T~s~ de manière plus marquée que l'E2 seul, le Depo-Eligard est le seul traitement pour lequel toutes les valeurs de T~s~ sont sous le cutoff. À noter que les patient·e·s sous Spironolactone présentaient des valeurs médianes d'E2s plus faibles que les autres patient·e·s. Les graphiques du panneau B suggèrent une indépendance entre l'E2~s~ et la T~s~, ce qui est surprenant. Pour creuser davantage cette relation, le panneau C montre le lien entre T~s~ et LH tandis que le panneau D, entre LH et E2~s~. Pris ensemble, ces deux panneaux permettent de mieux comprendre les liens entre E2~s~et T~s~. En effet, la T~s~ est clairement influencée par la concentration sérique de LH, avec une valeur-seuil à partir de laquelle la production de T n'est plus inhibée. La supériorité du Depo-Eligard peut alors se comprendre par son action directe sur la LH et les valeurs continuellement inférieures au seuil de LH. La Spironolactone, de son côté, ne semble pas influer sur les concentrations en LH. En outre, la LH diminue tandis que l'E2~s~ augmente, mais les valeurs cibles de 100-200ng/L recommandées dans la littérature semblent insuffisantes pour passer sous le seuil, pour la majorité des patient·e·s. Le lien entre T~s~ et E2~s~ étant donc indirect et passant par l'inhibition de la LH, les concentrations seules d'E2~s~ ne permettent pas, dans cet échantillon limité, de prédire la T~s~ tout en l'influençant néanmoins.
 
-```{r OutcomePlotF, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution de l'axe hypothalamo-hypophyso-gonadique chez les patient·e·s transféminin·e·s", fig.dim=c(10,11), out.width = '100%', eval = knitr::is_html_output()}
+```{r OutcomePlotF, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution de l'axe hypothalamo-hypophyso-gonadique chez les patient·e·s transféminin·e·s", out.height= '400px', out.width = '100%', eval = knitr::is_html_output()}
 
 .anim_T_time_F
 ```
 
-```{r OutcomePlotFAD, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.dim=c(10,11), out.width = '100%', eval = knitr::is_html_output()}
+```{r OutcomePlotFAD, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', out.width = '100%', out.height='400px', eval = knitr::is_html_output()}
 
 .anim_T_O2_F
 .anim_T_LH_F
@@ -180,9 +190,19 @@ knitr::include_graphics('output/plots/outcome_plot_F.png')
 
 \newpage
 
+<center>
+
+<caption>
+
+(#tab:OutcomeTableF) Évolution des paramètres des patient·e·s transféminin·e·s, par consultation et par traitement
+
+</caption>
+
+</center>
+
 ```{r outcome_tbl_F_html, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "OutcomeTableF", out.width = '100%', eval = knitr::is_html_output()}
 
-.outcome_F_ft
+.outcome_F_tbl_HTML
 ```
 
 <!---BLOCK_LANDSCAPE_START--->
@@ -215,12 +235,12 @@ source('scripts/data_manipulation/wilcoxon.R', encoding = 'UTF-8')
 
 De manière similaire à ce qui a été présenté plus haut, la figure \@ref(fig:OutcomePlotM) se divise en 4 panneaux, ceux-ci mesurant désormais l'évolution de la T~s~ en fonction du temps (A), l'évolution de l'E2~s~ en fonction de la T~s~ (B), l'évolution de la FSH en fonction de l'E2~s~ (C), ainsi que l'évolution de la FSH en fonction de la T~s~ (D). Les mêmes éléments graphiques et couleurs ont été utilisés, avec des valeurs cibles de 14-24nmol/L pour la Ts. Comme pour les patient·e·s transféminin·e·s, on ne remarque pas d'influence du temps sur la T~s~, ce qui suggère, une fois encore, que l'équilibre hormonal est rapidement atteint et n'évolue plus, à posologie identique. De manière surprenante, l'E2~s~ n'est pas influencée par la T~s~. En analysant plus en détail l'axe HHG, on peut constater une relation inversement proportionnelle entre FSH et E2~s~ ainsi qu'entre FSH et testostérone sérique. L'explication de ces résultats nécessite un détour théorique sur le rétrocontrôle de l'axe HHG et sera donc développée dans la discussion. Au niveau des autres valeurs de laboratoire, le nombre de patient·e·s n'étant pas divisé entre de multiples traitement, l'effectif était suffisant pour un test statistique comparant les valeurs à T0 et celles à T1. Ces résultats doivent toutefois être interprétés avec prudence vu la taille de l'échantillon. Un test des rangs signés de Wilcoxon a permis de déterminer que la majoration de l'hémoglobinémie et de l'hématocrite étaient statistiquement significative (`r scales::pvalue(.Hb_Wil$p.value, accuracy = 0.05, add_p = T)` pour les deux), de même que l'augmentation de la créatinine `r scales::pvalue(.creat_Wil$p.value, accuracy = 0.05, add_p =T)`. En ce qui concerne le bilan lipidique, seule la diminution du HDL-C était significative (`r scales::pvalue(.Hb_Wil$p.value, accuracy = 0.05, add_p = T)`). Enfin, l'augmentation des transaminases hépatiques était également significative (`r scales::pvalue(.TGO_Wil$p.value, accuracy = 0.05, add_p = T)` et `r scales::pvalue(.TGP_Wil$p.value, accuracy = 0.05, add_p = T)` pour TGO et TGP, respectivement). Les différentes valeurs se retrouvent dans la table \@ref(tab:OutcomeTableM).
 
-```{r OutcomePlotM, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution de l'axe hypothalamo-hypophyso-gonadique chez les patient·e·s transmasculin·e·s", fig.dim=c(10,11), out.width = '100%', eval = knitr::is_html_output()}
+```{r OutcomePlotM, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution de l'axe hypothalamo-hypophyso-gonadique chez les patient·e·s transmasculin·e·s", out.width = '100%', out.height='400px', eval = knitr::is_html_output()}
 
 .anim_T_time_M
 ```
 
-```{r OutcomePlotMAD, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.dim=c(10,11), out.width = '100%', eval = knitr::is_html_output()}
+```{r OutcomePlotMAD, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', out.width = '100%',out.height='400px', eval = knitr::is_html_output()}
 
 .anim_T_O2_M
 .anim_T_FSH_M
@@ -232,9 +252,21 @@ De manière similaire à ce qui a été présenté plus haut, la figure \@ref(fi
 knitr::include_graphics('output/plots/outcome_plot_M.png')
 ```
 
+\newpage
+
+<center>
+
+<caption>
+
+(#tab:OutcomeTableM) Évolution des paramètres des patient·e·s transmasculin·e·s, par consultation
+
+</caption>
+
+</center>
+
 ```{r outcome_tbl_M_html, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "OutcomeTableM", out.width = '100%', eval = knitr::is_html_output()}
 
-.outcome_M_ft
+.outcome_M_tbl_HTML
 ```
 
 ```{r outcome_tbl_M_word, echo=FALSE, warning=FALSE, message=FALSE, tab.id = "OutcomeTableM", eval = !knitr::is_html_output()}
