--- a/02-introduction.Rmd
+++ b/02-introduction.Rmd
@@ -19,9 +19,9 @@ citr::tidy_bib_file(
 
 ### Sexes, genres et sexualités
 
-Trois concepts doivent être distingués pour comprendre les transidentités : le sexe, le genre, et l'orientation sexuelle[@americanpsychologicalassociation2014]. La figure \@ref(fig:SGS) représente visuellement cette distinction.
+Trois concepts doivent être distingués pour comprendre les transidentités : les sexes, les genres, et les orientations sexuelles [@americanpsychologicalassociation2014]. La figure \@ref(fig:SGS) représente visuellement cette distinction.
 
-Le sexe correspond aux caractéristiques biologiques d'un individu et est généralement assigné à la naissance, voire avant. Différemment aux conceptions classiques, il ne s'agit pas d'une entité binaire, composée exclusivement des deux pôles "mâle" et "femelle". En effet, l'avancée des connaissances en biologie a permis d'avoir une vision plus nuancée du sexe en tant que spectre se divisant en quatre axes [@Ainsworth2015] :
+Les sexes correspondent aux caractéristiques biologiques d'un individu et est généralement assigné à la naissance, voire avant. Différemment aux conceptions classiques, il ne s'agit pas d'une entité binaire, composée exclusivement des deux pôles "mâle" et "femelle". En effet, l'avancée des connaissances en biologie a permis d'avoir une vision plus nuancée du sexe en tant que spectre se divisant en quatre axes [@Ainsworth2015] :
 
 1.  Les chromosomes ;
 
@@ -31,7 +31,7 @@ Le sexe correspond aux caractéristiques biologiques d'un individu et est géné
 
 4.  Les caractéristiques sexuelles secondaires (taux hormonaux, pilosité, voix, etc.)
 
-Pour la majorité des individus, ces quatre caractéristiques s'alignent et se situent à l'un des extrêmes du spectre (p. ex. un individu XY avec des testicules, un pénis, et des caractéristiques sexuelles secondaires masculines). Néanmoins, des variations plus ou moins subtiles sont fréquentes et l'on estime que jusqu'à 1.7% de la population est concerné·e par de telles variations [@VanLisdonk2014]. On parle d'intersexuation pour se référer à ces variations du développement sexuel et de personnes intersexes pour évoquer les personnes concernées.
+Pour la majorité des individus, ces quatre caractéristiques s'alignent et se situent à l'un des extrêmes du spectre (p. ex. un individu XY avec des testicules, un pénis, et des caractéristiques sexuelles secondaires masculines) ; on parle alors de personnes dyadiques. Néanmoins, des variations plus ou moins subtiles sont fréquentes et l'on estime que jusqu'à 1.7% de la population est concerné·e par de telles variations [@VanLisdonk2014]. On parle d'intersexuation pour se référer à ces variations du développement sexuel et de personnes intersexes pour évoquer les personnes concernées.
 
 Le genre, quant à lui, peut être sous-divisé en deux :
 
@@ -57,7 +57,7 @@ knitr::include_graphics('files/sexe_genre_sexualite.png', dpi = 300)
 
 Les personnes transgenres sont donc des personnes dont le genre ne correspond pas avec le sexe qui leur a été assigné à la naissance [@americanpsychologicalassociation2014]. Il s'agit d'un terme-parapluie regroupant une grande diversité d'identités et d'expression de genre différentes. Ainsi retrouve-t-on, en plus des hommes et des femmes transgenres, une multitude d'identités dites non-binaires. Les personnes non-binaires ne se retrouvent pas - ou, du moins, pas entièrement- dans les genres 'hommes' et 'femmes'. Certaines personnes non-binaires se définissent en-dehors du masculin et du féminin, d'autres oscillent quelque part entre les deux sans s'identifier complètement à l'un de ces deux genres. En outre, l'identification peut être fluide et varier en fonction du temps [@americanpsychologicalassociation2014].
 
-En raison de cette pluralité d'expérience et de parcours, il est malaisé d'estimer le nombre de personnes transgenres. De fait, l'estimation varie en fonction que l'on prenne en compte l'auto-identification en tant que personne transgenre ou différentes étapes de transition sociale, administrative, hormonale ou chirurgicale. J'ai choisi de retenir l'auto-identification comme critère en raison de l'approche trans-affirmative de ce travail. Par ailleurs, sachant que les parcours de transition sont variés, se limiter à une étape (p. ex. le fait d'être sous traitement hormonal) relève d'une décision arbitraire qui sous-estimera les estimations. Un rapport de 2016 estime que 0.6% de la population adulte américaine est transgenre en se basant sur l'autodétermination des individus [@flores2016]. Sachant que le rapport d'activité de 2013 de l'INAMI indiquait un nombre médian de 842 patient·e·s par généraliste [@commissiondeprofilsdesmedecinsgeneralistes2015], chaque généraliste devrait avoir une médiane 5 patient·e·s transgenres dans sa patientèle.
+En raison de cette pluralité d'expérience et de parcours, il est malaisé d'estimer le nombre de personnes transgenres. De fait, l'estimation varie en fonction que l'on prenne en compte l'auto-identification en tant que personne transgenre ou différentes étapes de transition sociale, administrative, hormonale ou chirurgicale. J'ai choisi de retenir l'auto-identification comme critère en raison de l'approche trans-affirmative de ce travail. Par ailleurs, sachant que les parcours de transition sont variés, se limiter à une étape (p. ex. le fait d'être sous traitement hormonal) relève d'une décision arbitraire qui sous-estimera les estimations. Un rapport de 2016 estime que 0.6% de la population adulte américaine est transgenre en se basant sur l'autodétermination des individus [@flores2016], mais des estimations récentes grimpent jusqu'à 2% [@goodman2019]. Sachant que le rapport d'activité de 2013 de l'INAMI indiquait un nombre médian de 842 patient·e·s par généraliste [@commissiondeprofilsdesmedecinsgeneralistes2015], chaque généraliste devrait avoir une médiane 5 à 17 patient·e·s transgenres dans sa patientèle, selon les estimations.
 
 ### Nécessité déontologique de se former dans les thématiques trans-spécifiques
 
@@ -83,7 +83,7 @@ L'origine de ces chiffres peut être expliquée par la théorie du stress minori
 
 ### Accès au soin
 
-L'accès au soin est un enjeu majeur pour les personnes transgenres. La relation avec le monde médical est rendue compliquée par le manque de formation des professionnel·le·s, à la fois dans les compétences médicales, mais également dans les compétences culturelles [@pampati2021]. Ce manque de compétences culturelles se traduit en pratique par un non-respect des pronoms et du prénom, ainsi que par des questions et examens cliniques invasifs, même lorsque la consultation n'avait aucun lien avec la transidentité [@teti2021; @hostetter2022]. Cela recouvre par exemple des questions sur les opérations chirurgicales éventuelles ou sur les organes génitaux des patient·e·s. De plus, sur le plan des compétences médicales, le manque de formation se traduit par un manque de dépistage d'IST ou de cancer [@teti2021]. En outre, le manque de professionnel·le·s formé·e·s entraîne une limitation de l'accès aux soins d'affirmation de genre pour les personnes qui en ont besoin [@hostetter2022]. En Belgique, 24,7% des répondant·e·s de l'enquête de l'IEFH n'avaient pas cherché d'aide médicale pour leur transition, notamment pour des raisons de peur de préjugés de la part des professionnel·le·s (24,2% des personnes n'ayant pas cherché d'aide médicale) ou faute de savoir où s'adresser (21,2%) [@motmans2017]. Et, parmi les personnes s'étant adressé·e·s à leur médecin traitant, seul·e·s 56.8% ont reçu des informations jugées utiles et pertinentes. Ces différents éléments ont pour conséquence d'entraîner un moindre recours au soin, même lorsqu'ils sont nécessaires, ce qui exacerbe les inégalités de santé susmentionnées [@hostetter2022].
+L'accès au soin est un enjeu majeur pour les personnes transgenres. La relation avec le monde médical est rendue compliquée par le manque de formation des professionnel·le·s, à la fois dans les compétences médicales, mais également dans les compétences culturelles [@pampati2021]. Ce manque de compétences culturelles se traduit en pratique par un non-respect des pronoms et du prénom, ainsi que par des questions et examens cliniques invasifs, même lorsque la consultation n'avait aucun lien avec la transidentité [@teti2021; @hostetter2022]. Cela recouvre par exemple des questions sur les opérations chirurgicales éventuelles ou sur les organes génitaux des patient·e·s. De plus, sur le plan des compétences médicales, le manque de formation se traduit par un manque de dépistage d'IST ou de cancer [@teti2021]. En outre, le manque de professionnel·le·s formé·e·s entraîne une limitation de l'accès aux soins d'affirmation de genre pour les personnes qui en ont besoin [@hostetter2022]. En Belgique, 24,7% des répondant·e·s de l'enquête de l'IEFH n'avaient pas cherché d'aide médicale pour leur transition, notamment pour des raisons de peur de préjugés de la part des professionnel·le·s (24,2% des personnes n'ayant pas cherché d'aide médicale) ou faute de savoir où s'adresser (21,2%) [@motmans2017]. Et, parmi les personnes s'étant adressé·e·s à leur médecin traitant, seul·e·s 56.8% ont reçu des informations jugées utiles et pertinentes. Ces différents éléments ont pour conséquence d'entraîner un moindre recours au soin, même lorsqu'il est nécessaire, ce qui exacerbe les inégalités de santé susmentionnées [@hostetter2022].
 
 ## Le traitement hormonal d'affirmation de genre
 
@@ -93,13 +93,13 @@ L'objectif du THAG est d'améliorer le bien-être de la personne en la rapprocha
 
 ### Deux modèles d'initiation du traitement
 
-Il existe deux modèles principaux concernant l'initiation du traitement : le modèle standard promu par la World Professional Association for Transgender Health (WPATH) et l'Endocrine Society, qui requiert une évaluation psychiatrique et un diagnostic de "dysphorie de genre" et le modèle du consentement éclairé [@clark2021]. En Belgique, le premier modèle est celui des deux équipes de genre de Liège et de Gand. Cette nécessité d'un diagnostic pour accéder au THAG rentre en contradiction avec les principes de Jogjakarta, dont la Belgique est signataire, ainsi qu'avec le rapport du Parlement européen, tous deux mettant en avant l'importance de l'autodétermination comme droit humain fondamental [@terricabras2018; @2007]. Dans le cadre d'une approche trans-affirmative, le modèle du consentement éclairé reconnait aux individus la capacité de déterminer leur identité ainsi que de choisir les soins qui leur semblent appropriés [@clark2021]. Dans ce contexte, le rôle des médecins est d'informer au mieux les patient·e·s sur les conséquences positives et négatives du THAG afin d'obtenir un consentement libre et éclairé, point de départ du THAG.
+Il existe deux modèles principaux concernant l'initiation du traitement : le modèle standard promu par la World Professional Association for Transgender Health (WPATH) et l'Endocrine Society, qui requiert une évaluation psychiatrique et un diagnostic de "dysphorie de genre" et le modèle du consentement éclairé [@clark2021]. En Belgique, le premier modèle est celui des deux équipes de genre de Liège et de Gand. Cette nécessité d'un diagnostic pour accéder au THAG rentre en contradiction avec les principes de Jogjakarta, dont la Belgique est signataire, ainsi qu'avec le rapport du Parlement européen, tous deux mettant en avant l'importance de l'autodétermination comme droit humain fondamental [@terricabras2018; @2007]. Dans le cadre d'une approche trans-affirmative, le modèle du consentement éclairé reconnait aux individus la capacité de déterminer leur identité ainsi que de choisir les soins qui leur semblent appropriés [@clark2021]. Dans ce contexte, le rôle des médecins est d'informer au mieux les patient·e·s sur les conséquences positives et négatives du THAG afin d'obtenir un consentement libre et éclairé, point de départ du THAG. Le Réseau psycho-médico-social trans\*/inter\* belge, mis en place par Genres Pluriels, appartient à ce second modèle. Il permet un suivi pluridisciplinaire au départ d'une première ligne psychosociale informative avant une orientation médicale, et accompagne les personnes durant tout leur suivi.
 
 ### Traitement féminisant
 
 #### Effets
 
-Les effets du THAG chez les femmes transgenres consistent en des modifications de la fonction sexuelle et de la composition corporelle, un adoucissement de la peau, un développement mammaire, une diminution de la pilosité, et un arrêt de l'alopécie androgénique [@hembree2017]. Les modifications de la fonction sexuelle consistent en une diminution des érections spontanées, une diminution du volume testiculaire et un impact partiellement réversible sur la spermatogenèse, pouvant aller jusqu'à l'azoospermie complète [@randolph2018]. Il est donc important d'informer les patientes des conséquences sur leur fertilité, et de leur recommander une cryopréservation des gamètes avant initiation, en cas de désir de parentalité. En Belgique, seul·e·s 30,5% des répondant·e·s de l'enquête de l'IEFH avaient reçu ces informations avant initiation du THAG [@motmans2017]. Les modifications de la composition corporelle correspondent à une répartition plus féminine des graisses ainsi qu'à une diminution de la musculature.
+Les effets du THAG chez les femmes transgenres consistent en des modifications de la fonction sexuelle et de la composition corporelle, un adoucissement de la peau, un développement mammaire, une diminution de la pilosité, et un arrêt de l'alopécie androgénique [@hembree2017]. La diminution de la pilosité est d'apparition lente et d'efficacité modérée, rendant le recours à l'épilation définitive fréquent, lorsque cet élément est important pour le point de confort. Les modifications de la fonction sexuelle consistent en une diminution des érections spontanées, une diminution du volume testiculaire et un impact partiellement réversible sur la spermatogenèse, pouvant aller jusqu'à l'azoospermie complète [@randolph2018]. Il est donc important d'informer les patientes des conséquences sur leur fertilité, et de leur recommander une cryopréservation des gamètes avant initiation, en cas de désir de parentalité. En Belgique, seul·e·s 30,5% des répondant·e·s de l'enquête de l'IEFH avaient reçu ces informations avant initiation du THAG [@motmans2017]. Les modifications de la composition corporelle correspondent à une répartition plus féminine des graisses ainsi qu'à une diminution de la musculature.
 
 Une partie de ces effets dépendent uniquement de la concentration sérique en œstradiol (E2~s~) tandis que d'autres dépendent uniquement de la diminution de la concentration sérique en testostérone (T~s~). Ainsi la modification des fonctions sexuelles, la diminution de la pilosité, la diminution de la musculature, et l'arrêt de l'alopécie androgénique dépendent-ils tous de la T~s~ [@randolph2018]. A contrario, le développement mammaire, la répartition féminine des graisses, et l'adoucissement de la peau dépendent de l'E2~s~ [@randolph2018]. Connaître le point de confort des patientes permet donc de définir des objectifs plus individualisés, notamment vis-à-vis des valeurs à atteindre à la prise de sang et des traitements à employer pour ce faire.
 
@@ -121,7 +121,7 @@ Les deux éléments les plus importants à prendre en compte dans la sécurité 
 
 #### Effets
 
-Les effets du THAG masculinisant sont l'aménorrhée, le développement du clitoris, l'acné, l'aggravation de la voix, une majoration de la pilosité, une redistribution masculine des graisses, une majoration de la musculature, et une alopécie androgénique [@moravek2018]. Le terme employé dans la communauté pour parler de cette augmentation de taille du clitoris est "*dickclit"*. Les effets sur la voix et le dickclit sont irréversibles [@moravek2018]. L'impact sur la fertilité semble moins sévère que pour le THAG féminisant [@yaish2021], mais un counseling adéquat reste de mise. Il est important de noter que les hommes transgenres peuvent toujours tomber enceints sous THAG, y compris en l'absence de règles [@taub2020]. Une contraception adéquate doit donc être proposée pour les patients dont les rapports sexuels peuvent induire une grossesse[@krempasky2020].
+Les effets du THAG masculinisant sont l'aménorrhée, le développement du clitoris, l'acné, l'aggravation de la voix, une majoration de la pilosité, une redistribution masculine des graisses, une majoration de la musculature, et une alopécie androgénique [@moravek2018]. Le terme employé dans la communauté pour parler de cette augmentation de taille du clitoris est "*dickclit"*. Les effets sur la voix et le dickclit sont irréversibles [@moravek2018]. Il n'y a pas de donnée claire sur la réversibilité de l'alopécie androgénique et de la majoration de la pilosité, mais un arrêt de l'alopécie et une réversibilité partielle de la pilosité paraissent vraisemblables. L'impact sur la fertilité semble moins sévère que pour le THAG féminisant [@yaish2021], mais un counseling adéquat reste de mise. Il est important de noter que les hommes transgenres peuvent toujours tomber enceints sous THAG, y compris en l'absence de règles [@taub2020]. Une contraception adéquate doit donc être proposée pour les patients dont les rapports sexuels peuvent induire une grossesse[@krempasky2020].
 
 #### Modalités
 
