--- a/05-discussion.Rmd
+++ b/05-discussion.Rmd
@@ -44,15 +44,15 @@ Une des difficultés par rapport à l'interprétation des prises de sang est qu'
 
 ### Impact du THAG masculinisant sur les paramètres biologiques
 
-Aucun test statistique n'ayant été utilisé pour le THAG féminisant, commentera uniquement les résultats du THAG masculinisant.
+Aucun test statistique n'ayant été utilisé pour le THAG féminisant, je ne commenterai ici que les résultats du THAG masculinisant.
 
 L'augmentation de l'hémoglobine, de l'hématocrite, de la créatinine et des transaminases hépatiques observées dans cet échantillon est confirmée par la littérature scientifique, de même que la diminution en HDL-C [@greene2021; @hashemi2021; @Velho2017].
 
-### L'inhibition de l'axe hypothalamo-hypophyso-gonadique 
+### L'inhibition de l'axe hypothalamo-hypophyso-gonadique
 
-Peu importe le sexe, l'inhibition de l'axe HHG est produite par l'action des œstrogènes sur l'hypothalamus qui entraîne une diminution de la concentration en LH et FSH[@hall2019; @liu2019]. La production de testostérone étant stimulée par une action de la LH sur les testicules [@liu2019], on comprend aisément que les taux de testostérone augmentent lorsque la LH augmente dans la figure \@ref(fig:OutcomePlotF). En outre, le rôle inhibiteur de l'E2 explique également le fait que la LH diminue tandis que l'E2~s~ augmente. Toutefois, les valeurs de LH variaient fortement pour une même valeur d'E2~s~. Cette variabilité, combinée aux concentrations relativement élevées en E2~s~ nécessaires pour inhiber complètement l'axe HHG, explique sans doute qu'une relation directe entre la T~s~ et l'E2~s~ n'a pu être mise en évidence ici. On constate également sur ce graphique que la Spironolactone n'a pas d'influence notable sur l'axe HHG. En effet, lors de la combinaison E2 + Spironolactone, c'est bel et bien l'E2~s~ qui permet une diminution de la Ts [@angus2021]. Les T~s~ relativement élevées chez les patient·e·s prenant de la Spironolactone proviennent des valeurs d'E2s plus faibles (voir tableau \@ref(tab:OutcomeTableF)). Après discussion avec les patient·e·s en question lors d'une consultation de suivi, mon hypothèse sur cet E2~s~ bas réside en une application suboptimale du gel chez deux des patient·e·s. Elle ne pourra cependant pas être confirmée d'ici la publication de ce TFE. Pour les personnes sous THAG masculinisant, la situation est quelque peu différente. En effet, c'est la FSH qui stimule la production d'E2 par les ovaires [@hall2019] et c'est majoritairement l'aromatisation de la Ts en E2s qui permet d'inhiber la production de FSH[@liu2019]. Autrement dit, une relation linéaire décroissante où la l'E2~s~ diminue tandis que la T~s~ augmente, en miroir de ce qu'on observe sous THAG féminisant, n'est pas observée puisqu'il faut que la Ts se transforme en E2~s~ pour que la production endogène d'E2 diminue. En outre, la FSH ne dépend que partiellement de la stimulation de la GnRH, en comparaison avec la LH. De fait, une suppression complète de la GnRH n'entraîne une inhibition que de 40-60% de la FSH contre 90% de la LH [@hall2019]. Ces différents éléments pourraient permettre d'expliquer à la fois les valeurs plus élevées en FSH et en E2s que chez les hommes cisgenres ainsi que le fait que l'ovulation reste possible sous THAG masculinisant, bien que plus rare [@taub2020].
+Peu importe le sexe, l'inhibition de l'axe HHG est produite par l'action des œstrogènes sur l'hypothalamus qui entraîne une diminution de la concentration en LH et FSH[@hall2019; @liu2019]. La production de testostérone étant stimulée par une action de la LH sur les testicules [@liu2019], on comprend aisément que les taux de testostérone augmentent lorsque la LH augmente dans la figure \@ref(fig:OutcomePlotF). En outre, le rôle inhibiteur de l'E2~s~ explique également le fait que la LH diminue tandis que l'E2~s~ augmente. Toutefois, les valeurs de LH variaient fortement pour une même valeur d'E2~s~. Cette variabilité, combinée aux concentrations relativement élevées en E2~s~ nécessaires pour inhiber complètement l'axe HHG, explique sans doute qu'une relation directe entre la T~s~ et l'E2~s~ n'a pu être mise en évidence ici. On constate également sur ce graphique que la Spironolactone n'a pas d'influence notable sur l'axe HHG. En effet, lors de la combinaison œstradiol + Spironolactone, c'est bel et bien l'E2~s~ qui permet une diminution de la T~s~ [@angus2021]. Les T~s~ relativement élevées chez les patient·e·s prenant de la Spironolactone proviennent des valeurs d'E2~s~ plus faibles (voir tableau \@ref(tab:OutcomeTableF)). Après discussion avec les patient·e·s en question lors d'une consultation de suivi, mon hypothèse sur cet E2~s~ bas réside en une application suboptimale du gel chez deux des patient·e·s. Elle ne pourra cependant pas être confirmée d'ici la publication de ce TFE. Pour les personnes sous THAG masculinisant, la situation est quelque peu différente. En effet, c'est la FSH qui stimule la production d'E2~s~ par les ovaires [@hall2019] et c'est majoritairement l'aromatisation de la T~s~ en E2~s~ qui permet d'inhiber la production de FSH[@liu2019]. Autrement dit, une relation linéaire décroissante où la l'E2~s~ diminue tandis que la T~s~ augmente, en miroir de ce qu'on observe sous THAG féminisant, n'est pas observée puisqu'il faut que la T~s~ se transforme en E2~s~ pour que la production endogène d'E2~s~ diminue. En outre, la FSH ne dépend que partiellement de la stimulation de la GnRH, en comparaison avec la LH. De fait, une suppression complète de la GnRH n'entraîne une inhibition que de 40-60% de la FSH contre 90% de la LH [@hall2019]. Ces différents éléments pourraient permettre d'expliquer à la fois les valeurs plus élevées en FSH et en E2~s~ que chez les hommes cisgenres ainsi que le fait que l'ovulation reste possible sous THAG masculinisant, bien que plus rare [@taub2020].
 
-En pratique, pour les patient·e·s sous THAG féminisant présentant une Ts supérieure aux valeurs cibles des guidelines et pour lesquel·le·s il existe un inconfort vis-à-vis des effets de la Ts, le choix se portera entre une augmentation de la dose d'E2 pour inhiber l'axe, l'introduction de Spironolactone, comme antagoniste des effets de la Ts, ou l'introduction d'analogue de la GnRH comme le Depo-Eligard pour la supprimer. En l'absence de données fiables sur la meilleure décision à prendre, celle-ci devra mettre en balance les risques de TVP liés à l'E2 avec le coût des traitements et les préférences des patient·e·s. Pour les patient·e·s sous THAG, il est important de garder à l'esprit qu'une ovulation - et donc qu'une grossesse- restent possibles et une contraception adéquate doit être proposée, si nécessaire. En outre, le dosage de FSH/LH a moins d'intérêt clinique chez les patient·e·s transmasculin·e·s que chez les patient·e·s transféminin·e·s.
+En pratique, pour les patient·e·s sous THAG féminisant présentant une T~s~ supérieure aux valeurs cibles des guidelines et pour lesquel·le·s il existe un inconfort vis-à-vis des effets de la T~s~, le choix se portera entre une augmentation de la dose d'œstradiol pour inhiber l'axe, l'introduction de Spironolactone, comme antagoniste des effets de la T~s~, ou l'introduction d'analogue de la GnRH comme le Depo-Eligard pour la supprimer. En l'absence de données fiables sur la meilleure décision à prendre, celle-ci devra mettre en balance les risques de TVP liés à l'œstradiol avec le coût des traitements et les préférences des patient·e·s. Pour les patient·e·s sous THAG, il est important de garder à l'esprit qu'une ovulation - et donc qu'une grossesse- restent possibles et une contraception adéquate doit être proposée, si nécessaire. En outre, le dosage de FSH/LH a moins d'intérêt clinique chez les patient·e·s transmasculin·e·s que chez les patient·e·s transféminin·e·s.
 
 ## Implications pour l'organisation des soins de santé
 
